Enhance environment configuration and middleware setup
- Updated `.env.example` to include new security and monitoring variables.
- Modified `deno.json` to improve task commands with `--no-lock` flag.
- Added `check-env.ts` script for validating environment variables and configurations.
- Refined `src/main.ts` to await server start and improved logging on connection.
- Introduced `constants.ts` for API versioning and service name definitions.
- Implemented CORS middleware in `src/middleware/cors.ts` for handling cross-origin requests.
- Established security middleware in `src/middleware/security.ts` to enforce HTTP security headers.
- Updated health check route in `src/routes/health.ts` for enhanced service monitoring.
- Adjusted Webflow API types in `src/types/webflow.ts` for stricter type definitions.

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,17 @@
+# Server Configuration
+PORT=8000
+NODE_ENV=development
+
 # Webflow API Configuration
 WEBFLOW_API_TOKEN=your_webflow_api_token_here
 WEBFLOW_COLLECTION_ID=your_collection_id_here
 WEBFLOW_SITE_ID=your_site_id_here
 
-# Server Configuration
-PORT=8000
-NODE_ENV=development
-
-# Rate Limiting
+# Security
+CORS_ORIGINS=https://*.webflow.io,https://*.webflow.com
 RATE_LIMIT_WINDOW_MS=60000
-RATE_LIMIT_MAX_REQUESTS=100
+RATE_LIMIT_MAX_REQUESTS=10
 
-# CORS
-ALLOWED_ORIGINS=https://your-site.webflow.io
+# Optional: Monitoring
+SENTRY_DSN=
+LOG_LEVEL=info
