--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "dev": "deno run --no-lock --watch --allow-net --allow-env --allow-read src/main.ts",
+    "dev": "deno run --no-lock --watch --allow-net --allow-env --allow-read --allow-sys src/main.ts",
     "start": "deno run --no-lock --allow-net --allow-env src/main.ts",
     "test": "deno test --no-lock --allow-net --allow-env --allow-read",
     "test:cors": "deno run --no-lock --allow-net scripts/test-cors.ts",
@@ -31,7 +31,8 @@
     "@routes/": "./src/routes/",
     "@services/": "./src/services/",
     "@utils/": "./src/utils/",
-    "@types/": "./src/types/"
+    "@types/": "./src/types/",
+    "@app-types": "./src/types/hono.ts"
   },
   "lint": {
     "include": ["src/"],
