Add new test scripts and enhance CORS middleware in Deno configuration
- Introduced new test scripts in `deno.json` for form and API testing, improving the testing framework.
- Updated CORS middleware in `src/middleware/cors.ts` to allow 'null' origin for file:// protocol during development, enhancing compatibility.
- Enhanced form submission handling in `src/routes/webflow.ts` with improved error handling and logging for CMS item creation.
- Updated metadata generation in `src/services/metadataGenerator.ts` to utilize an advanced intro text extractor, improving content processing.

--- a/deno.json
+++ b/deno.json
@@ -4,6 +4,8 @@
     "start": "deno run --allow-net --allow-env src/main.ts",
     "test": "deno test --allow-net --allow-env --allow-read",
     "test:cors": "deno run --allow-net scripts/test-cors.ts",
+    "test:form": "deno run --allow-net --allow-read serve-test.ts",
+    "test:api": "deno run --allow-net --allow-env --allow-read scripts/test-form.ts",
     "deploy": "deployctl deploy --project=webflow-middleware --prod src/main.ts",
     "check": "deno check src/**/*.ts && deno lint && deno fmt --check",
     "fix:lockfile": "deno run --allow-read --allow-write --allow-run scripts/fix-lockfile.ts",
