--- a/deno.json
+++ b/deno.json
@@ -23,7 +23,10 @@
     "slugify": "npm:slugify@^1.6.6",
     "reading-time": "npm:reading-time@^1.5.0",
     "@std/testing/asserts": "jsr:@std/testing@^0.218.0/asserts",
-    "@std/assert": "jsr:@std/assert@^0.218.0",
+    "@std/testing/bdd": "jsr:@std/testing@^0.218.0/bdd",
+    "@std/testing/mock": "jsr:@std/testing@^0.218.0/mock",
+    "@std/testing/time": "jsr:@std/testing@^0.218.0/time",
+    "@std/assert": "jsr:@std/assert@^1.0.13",
     "@std/dotenv": "jsr:@std/dotenv@^0.218.0",
     "@std/fmt": "jsr:@std/fmt@^0.218.0",
     "@std/http": "jsr:@std/http@^0.218.0",
