Update project configuration and enhance testing capabilities
- Updated `.gitignore` to include new directories for project planning and Claude-specific files.
- Modified `deno.json` to add new testing scripts for unit, integration, performance, coverage, and watch functionalities, improving testing workflow.
- Refactored `src/main.ts` to streamline app creation using a factory function, enhancing modularity and testability.
- Enhanced middleware registration in `src/middleware/index.ts` to support optional configuration, improving flexibility.
- Updated integration tests to utilize a setup function for consistent app initialization, ensuring better test isolation and reliability.
- Improved error handling and validation messages in various integration tests to enhance clarity and robustness.

--- a/deno.json
+++ b/deno.json
@@ -3,6 +3,11 @@
     "dev": "deno run --watch --allow-net --allow-env --allow-read --allow-sys src/main.ts",
     "start": "deno run --allow-net --allow-env src/main.ts",
     "test": "deno test --allow-net --allow-env --allow-read",
+    "test:unit": "deno test tests/unit --no-check --allow-all",
+    "test:integration": "deno test tests/integration --no-check --allow-all",
+    "test:performance": "deno test tests/performance --no-check --allow-all --allow-hrtime",
+    "test:coverage": "deno run --allow-all scripts/coverage.ts",
+    "test:watch": "deno test --watch --no-check --allow-all",
     "test:cors": "deno run --allow-net scripts/test-cors.ts",
     "test:form": "deno run --allow-net --allow-read serve-test.ts",
     "test:api": "deno run --allow-net --allow-env --allow-read scripts/test-form.ts",
