--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,32 @@
+# Webflow API Configuration
+WEBFLOW_API_TOKEN=Bearer your-webflow-api-token-here
+WEBFLOW_COLLECTION_ID=your-collection-id-here
+WEBFLOW_SITE_ID=your-site-id-here
+
 # Server Configuration
 PORT=8000
 NODE_ENV=development
 
-# Webflow API Configuration
-WEBFLOW_API_TOKEN=your_webflow_api_token_here
-WEBFLOW_COLLECTION_ID=your_collection_id_here
-WEBFLOW_SITE_ID=your_site_id_here
-
-# Security
+# CORS Configuration
+# Comma-separated list of allowed origins
+ALLOWED_ORIGINS=https://example.com,https://app.example.com
 CORS_ORIGINS=https://*.webflow.io,https://*.webflow.com
-RATE_LIMIT_WINDOW_MS=60000
-RATE_LIMIT_MAX_REQUESTS=10
 
-# Optional: Monitoring
-SENTRY_DSN=
+# Rate Limiting
+RATE_LIMIT_MAX_REQUESTS=10
+RATE_LIMIT_WINDOW_MS=60000
+
+# Logging
 LOG_LEVEL=info
+
+# Optional: Error Monitoring
+SENTRY_DSN=
+
+# Deployment Configuration (for production)
+VERSION=1.0.0
+GIT_COMMIT=
+GIT_BRANCH=main
+
+# Deno Deploy Environment Variables (set automatically)
+# DENO_REGION=
+# DENO_DEPLOYMENT_ID=
